Fix overflow bugs

--- a/source/sass/blocks/featured-product.scss
+++ b/source/sass/blocks/featured-product.scss
@@ -112,6 +112,10 @@
     text-align: center;
   }
 
+  .featured-product__info {
+    margin-bottom: 150px;
+  }
+
   .featured-product__info,
   .featured-product__ordering {
     box-sizing: border-box;
