--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -176,8 +176,6 @@
     padding-right: 55px;
     padding-left: 78px;
 
-    border: 1px solid $color-border-primary;
-
     &::before {
       top: 41px;
       left: 79px;
@@ -193,8 +191,6 @@
     padding-left: 80px;
     margin-top: -287px;
     margin-left: auto;
-
-    border: none;
   }
 
   .video__description {
